@@ -63,6 +63,7 @@ Release 0.19.0 - Unreleased
    HBASE-964   Startup stuck "waiting for root region"
    HBASE-980   Undo core of HBASE-975, caching of start and end row
    HBASE-982   Deleting a column in MapReduce fails (Doğacan Güney via Stack)
+   HBASE-984   Fix javadoc warnings
    
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
